# projeto-final-twitter

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  env.dev  manage.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  workflow-pr.yml
pftwitter/: asgi.py  settings.py  urls.py  views.py  wsgi.py
staticfiles/: staticfiles.json
zap/: admin.py  factories.py  forms.py  models.py  urls.py  views.py
zap/migrations/: 0001_initial.py
zap/templates/: base.html  followers.html  follows.html  home.html  login.html  meep_edit.html  meep_show.html  navbar.html  profile.html  profile_list.html  register.html  search.html  update_user.html
zap/tests/: test_models.py  test_views.py
